k8s/app/app-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
