k8s/app/appdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdb
  namespace: default
spec:
  selector:
    app: appdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
